After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 303827 - Copy and paste into StarOffice
Copy and paste into StarOffice
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: General
1.4.x
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2005-05-11 19:21 UTC by ming
Modified: 2005-05-12 10:08 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description ming 2005-05-11 19:21:46 UTC
Distribution/Version: Debian/2.6Kernel

1. Create any data entries in gnumeric spreadsheet(ver 1.4.2)
2. Select the cells and copy the data
3. Under StarOffice7/OpenOffice1.1.3 Spreadsheet, select any cell, paste data.
4. an extra cell is added saying <?xml:version="1.0" encoding="UTF-8"? Tables>

The expected result should be the original data pasted in origianl order.
Comment 1 ming 2005-05-11 19:22:56 UTC
This can be avoided by select "Paste unformatted text" under StarOffice/OpenOffice
Comment 2 Jon Kåre Hellan 2005-05-12 09:05:59 UTC
Gnumeric exports XHTML when the text/html target is requested. I'm not sure we
are allowed to do this.
If we export HTML 4.0 instead, the extra cell becomes just "Tables" in OOo.
"Tables" is the page title, which is a mandatory element, so we can't leave it out.

With gnumeric's current behaviour, we get a table if we paste a cell range from
gnumeric into abiword. If we export HTML 4.0, abiword comes back asking for
UTF8_STRING. Apparently it cannot parse our HTML 4.0.

Advertising the target application/xhtml+xml does not fix the problem with
abiword. Abiword doesn't request it.
Comment 3 Jon Kåre Hellan 2005-05-12 10:08:49 UTC
More about mime types for xhtml:

According to the W3C's note on XHTML media types
(http://www.w3.org/TR/2002/NOTE-xhtml-media-types-20020801/):

    * All XHTML variants should be sent out with the "application/xhtml+xml"
mime type.
    * HTML 4 should be sent with the "text/html" mime type and must not be sent
with the "application/xhtml+xml" mime type.
    * HTML compatible XHTML 1.0 may be sent with the "text/html" mime type (note
that this applies to 1.0 only, not 1.1 or anything which comes after).

As far as I can tell, our xhtml *is* html compatible. But Appendix C. HTML
Compatibility Guidelines says:

  "Be aware that processing instructions are rendered on some user agents."

The W3C validator doesn't complain when we remove the <?xml version="1.0"
encoding="UTF-8"?>. 

I've removed the xml declaration, and am closing. That title becomes a cell is
an OOo issue.