http://bugzilla.gnome.org/show_bug.cgi?id=303827 * html.c (html_file_save): Don't output the xml declaration for xhtml.