plugins/html/html.c
@@ -540,7 +540,6 @@ html_file_save (GOFileSaver const *fs, IOContext *io_context,
 		break;
 	case XHTML  :
 		gsf_output_puts (output,
-"<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n"
 "<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Transitional//EN\"\n"
 "\t\t\"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd\">\n"
 "<html xmlns=\"http://www.w3.org/1999/xhtml\" xml:lang=\"en\" lang=\"en\">\n"
